--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ USER_DB = 'prueba'
 PASS_DB = '12345678'
 NAME_DB = 'controlUp'
 KEY_SESSION = 'algo secreto 123'
-KEY_JWT = 'algo secreto 123'
+KEY_JWT = 'ajsdñljsafldsjfsdjfñlsdjfajueroutwzm.vnfkjheoit'
 TIEMPO = 600000
