--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ PORT = 3000
 USER_DB = 'prueba'
 PASS_DB = '12345678'
 NAME_DB = 'controlUp'
+HOST_DB = 'localhost'
 KEY_SESSION = 'algo secreto 123'
 KEY_JWT = 'ajsdñljsafldsjfsdjfñlsdjfajueroutwzm.vnfkjheoit'
 TIEMPO = 600000
